--- a/RIntro.tex
+++ b/RIntro.tex
@@ -564,7 +564,7 @@ table}\label{transposing-the-descriptive-statistics-table}}
 
 \% Table created by stargazer v.5.2.3 by Marek Hlavac, Social Policy
 Institute. E-mail: marek.hlavac at gmail.com \% Date and time: qua, out
-11, 2023 - 01:21:37
+11, 2023 - 12:17:16
 
 \begin{table}[!htbp] \centering 
   \caption{Shorter statistics} 
@@ -698,7 +698,8 @@ Graphically show which variables have the most missing values.
 \subsection{Problem 3: Handling Missing
 Data}\label{problem-3-handling-missing-data}}
 
-Adopt a strategy to handle the missing values.
+Adopt a strategy to handle the missing values.How many observations were
+lost?
 
 \begin{Shaded}
 \begin{Highlighting}[]
@@ -727,7 +728,8 @@ values.
 \subsection{Problem 5: Relationship
 Visualization}\label{problem-5-relationship-visualization}}
 
-Graphically show the relationship between age and salary.
+Graphically show the relationship between age and salary.Does the
+relationship between the variables make sense?
 
 \begin{Shaded}
 \begin{Highlighting}[]
@@ -755,6 +757,20 @@ Display the distribution of age.
 \subsection{Problem 7: Correlation}\label{problem-7-correlation}}
 
 What is the correlation value between age and salary?
+
+\begin{Shaded}
+\begin{Highlighting}[]
+\CommentTok{\#}\RegionMarkerTok{BEGIN}\CommentTok{ SOLUTION}
+
+\CommentTok{\#}\RegionMarkerTok{END}\CommentTok{ SOLUTION}
+\end{Highlighting}
+\end{Shaded}
+
+\hypertarget{problem-8}{%
+\subsection{Problem 8:}\label{problem-8}}
+
+In the nlswork\_no\_na dataset, can you identify any patterns or trends
+in the data related to unionized workers and their salaries?
 
 \begin{Shaded}
 \begin{Highlighting}[]
