--- a/RIntro.tex
+++ b/RIntro.tex
@@ -460,11 +460,14 @@ hours}\label{statistic-age-collgrad-ttl_exp-union-hours}}
 N 13,452 13,452 13,452 13,452 13,452 Mean 30.203 0.189 6.773 0.229
 36.199 St.~Dev. 6.414 0.391 4.409 0.420 10.034 Min 16 0 0.000 0 1\\
 Max 46 1 28.885 1 168\\
------------------------------------------------ \#\# 7.4. Export to pdf
+-----------------------------------------------
+
+\hypertarget{export-to-pdf}{%
+\subsection{7.4. Export to pdf}\label{export-to-pdf}}
 
 \% Table created by stargazer v.5.2.3 by Marek Hlavac, Social Policy
 Institute. E-mail: marek.hlavac at gmail.com \% Date and time: qua, out
-11, 2023 - 16:44:25
+11, 2023 - 20:10:10
 
 \begin{table}[!htbp] \centering 
   \caption{Shorter statistics} 
@@ -513,15 +516,6 @@ Variables}\label{relationships-between-continuous-variables}}
 \hypertarget{continuous-variable-distributions}{%
 \subsection{8.3. Continuous Variable
 Distributions}\label{continuous-variable-distributions}}
-
-\begin{Shaded}
-\begin{Highlighting}[]
-\FunctionTok{ggplot}\NormalTok{(}\AttributeTok{data =}\NormalTok{ nlswork\_no\_na) }\SpecialCharTok{+}
-  \FunctionTok{geom\_histogram}\NormalTok{(}\AttributeTok{mapping =} \FunctionTok{aes}\NormalTok{(}\AttributeTok{x =}\NormalTok{ wks\_work), }\AttributeTok{binwidth =} \FloatTok{0.5}\NormalTok{)}
-\end{Highlighting}
-\end{Shaded}
-
-\includegraphics{RIntro_files/figure-latex/unnamed-chunk-20-1.pdf}
 
 \hypertarget{categorical-and-continuous-variables}{%
 \subsection{8.4 Categorical and continuous
